syntax = "proto3";

package products;

import "google/protobuf/timestamp.proto";
import "services/products/products/response/product.response.proto";


option java_multiple_files = true;
option java_package = "com.ecommerceapp.generated.products";


message CreateProductResponse {
    ProductResponse product = 1;
}